<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">

        <ImageView
            android:id="@+id/film_details_header_image"
            android:layout_width="0dp"
            android:layout_height="298dp"
            android:scaleType="centerCrop"
            android:src="@drawable/avengers_header_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/film_details_header_image_mask"
            android:layout_width="0dp"
            android:layout_height="298dp"
            android:background="@drawable/header_background_mask"
            app:layout_constraintBottom_toBottomOf="@drawable/avengers_header_image"
            app:layout_constraintEnd_toEndOf="@drawable/avengers_header_image"
            app:layout_constraintStart_toStartOf="@drawable/avengers_header_image"
            app:layout_constraintTop_toTopOf="@drawable/avengers_header_image" />

        <FrameLayout
            android:id="@+id/top_menu"
            android:layout_width="0dp"
            android:layout_height="@dimen/top_menu_height"
            android:layout_marginTop="@dimen/top_menu_margin_top"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/ic_back_icon"
                    app:layout_constraintStart_toStartOf="@id/guidelineStart"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:text="@string/back"
                    android:textAppearance="@style/back" />
            </LinearLayout>
        </FrameLayout>

        <TextView
            android:id="@+id/age_rating_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="154dp"
            android:gravity="center_vertical"
            android:text="@string/age_13"
            android:textAppearance="@style/age"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/film_title_details"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/top_menu" />

        <TextView
            android:id="@+id/film_title_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/avengers_end_game"
            android:textAppearance="@style/filmTitle"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tag_line_details"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/age_rating_details" />

        <TextView
            android:id="@+id/tag_line_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/action_adventure_fantasy"
            android:textAppearance="@style/tag"
            app:layout_constraintBottom_toTopOf="@id/star1"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/film_title_details" />

        <ImageView
            android:id="@+id/star1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:src="@drawable/ic_star_icon_pink"
            app:layout_constraintEnd_toStartOf="@id/star2"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/tag_line_details" />

        <ImageView
            android:id="@+id/star2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3.25dp"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:src="@drawable/ic_star_icon_pink"
            app:layout_constraintEnd_toStartOf="@id/star3"
            app:layout_constraintStart_toEndOf="@id/star1"
            app:layout_constraintTop_toBottomOf="@id/tag_line_details" />

        <ImageView
            android:id="@+id/star3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3.25dp"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:src="@drawable/ic_star_icon_pink"
            app:layout_constraintEnd_toStartOf="@id/star4"
            app:layout_constraintStart_toEndOf="@id/star2"
            app:layout_constraintTop_toBottomOf="@id/tag_line_details" />

        <ImageView
            android:id="@+id/star4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3.25dp"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:src="@drawable/ic_star_icon_pink"
            app:layout_constraintStart_toEndOf="@id/star3"
            app:layout_constraintTop_toBottomOf="@id/tag_line_details" />

        <ImageView
            android:id="@+id/star5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3.25dp"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:src="@drawable/ic_star_icon_gray"
            app:layout_constraintStart_toEndOf="@id/star4"
            app:layout_constraintTop_toBottomOf="@id/tag_line_details" />

        <TextView
            android:id="@+id/reviews_count_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="20dp"
            android:text="@string/_125_reviews"
            android:textAppearance="@style/reviews"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/star5"
            app:layout_constraintTop_toBottomOf="@id/tag_line_details" />

        <TextView
            android:id="@+id/storyline_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/storyline_title"
            android:textAppearance="@style/storyline_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/reviews_count_details" />

        <TextView
            android:id="@+id/film_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="4sp"
            android:paddingVertical="4dp"
            android:text="@string/avengers_descr"
            android:textAppearance="@style/storyline"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/storyline_title" />


        <TextView
            android:id="@+id/cast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/cast_title"
            android:textAppearance="@style/storyline_title"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/film_description" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/first_cast"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toStartOf="@id/imageView2"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@id/cast" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/second_cast"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toStartOf="@+id/imageView3"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/cast" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/third_cast"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintStart_toEndOf="@id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/cast" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/fourth_cast"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
            app:layout_constraintStart_toEndOf="@id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/cast" />


        <TextView
            android:id="@+id/text1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            android:text="@string/robert_downey_jr"
            android:textAppearance="@style/names"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="6dp"
            android:text="@string/chris_evans"
            android:textAppearance="@style/names"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="6dp"
            android:text="@string/mark_ruffalo"
            android:textAppearance="@style/names"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <TextView
            android:id="@+id/text4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/chris_hemsworth"
            android:textAppearance="@style/names"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>